# expense-review-automation

./: .env.example  .gitignore  README.md  pyproject.toml
app/: config.py  db.py  main.py  models.py  schemas.py  security.py
app/parsers/: axis.py  generic.py  hdfc.py  icici.py  sbi_card.py
app/routers/: admin.py  auth.py  health.py  ingest.py  review.py  telegram.py
app/services/: dedupe_service.py  link_signing_service.py  parser_service.py  secret_store_service.py  splitwise_service.py  telegram_service.py  transaction_service.py
app/templates/: review_form.html
docs/: api-spec.md  architecture.md  parser-guide.md  product-spec.md  runbook.md
scripts/: check_setup.py  register_telegram_webhook.py  seed_groups.py
tests/: conftest.py  test_admin_and_sync.py  test_auth_health_root.py  test_ingest.py  test_parsers.py  test_review.py  test_review_more.py  test_secret_store.py  test_security_guards.py  test_services_unit.py  test_splitwise_service_more.py  test_telegram.py  test_telegram_flow_split.py  test_telegram_more.py  test_telegram_service_more.py
